added pinned tag

--- a/_posts/2024-02-20-welcome.md
+++ b/_posts/2024-02-20-welcome.md
@@ -2,7 +2,7 @@
 title: Welcome to Crank Technologies
 date: 2024-02-20 15:00:00 -0500
 categories: [welcome]
-tags: [welcome]
+tags: [pinned,welcome]
 ---
 
 # Welcome to Crank Technologies!
