edited for spelling and grammar

--- a/_posts/2024-02-20-welcome.md
+++ b/_posts/2024-02-20-welcome.md
@@ -13,15 +13,15 @@ Hello and welcome to Crank Technologies.  We, and currently we is mostly one per
 
 These are the core principles that we do our best to abide by with our work and what they mean.
 
-* Open source focused - Open source software means anyone can use it and everyone can see exactly how it's made.  That means any problems or security risks can be seen, reported, and fixed. It also means that if you have the skill and ability you can often run it for free. Now not everything we do and work is in open source.  Sometimes no has developed an open source solution for a particular problem.  Also sometimes you just plan don't have the time to build and maintain it yourself.  Even this website is open source!  If you see a problem with it head to github and make a pull request for a change.
-* Transparency in our work - We will always share with you exactly what we do.  Down to the code and exact steps we use to do it.  We will also make posts here to show you what you do incase you might want to try it yourself.
-* Privacy - Beyond the base of what we do nothing about you or exactly what we do for you will be shared. Even though we are focused on openess and transparency.  Your personal information should remain private and we will keep it that way.
+* Open Source Focused - Open source software means anyone can use it and everyone can see exactly how it's made.  That means any problems or security risks can be seen, reported, and fixed. It also means that if you have the skill and ability, you can often run it for free. Now not everything we do and work in is open source.  Sometimes no has developed an open source solution for a particular problem.  Also sometimes you just plain don't have the time to build and maintain it yourself.  Even this website is open source!  If you see a problem with it, head to Github and make a pull request for a change.
+* Transparency in our Work - We will always share with you exactly what we do.  Down to the code and exact steps we use to do it.  We will also make posts here to show you what you do in case you might want to try it yourself.
+* Privacy - Beyond the base of what we do nothing about you or exactly what we do for you will be shared. Even though we are focused on openness and transparency.  Your personal information should remain private and we will keep it that way.
 
 ## Work that we do
 
 * General Computer Support - Whether your computer is not working or if you just need some help and advice on using it.
-* Networking - Whether it be for your home or business, and whether it something you already have or we built it for you.  We will help you keep it running the best it can as well as help you configure and manage it.
-* Home Automation - We will help you fix or maintain smart home elements already in your home.  We prefer to use use a platform called Home Assistant.  No surprise, it's open source software.  It can all be run locally as well.  That means if you lose internet connection, your smart home will still work.  You also don't need to worry about a company dropping support for a piece of hardware you have in your home.
+* Networking - Whether it be for your home or business, and whether it's something you already have, or we built it for you.  We will help you keep it running the best it can as well as help you configure and manage it.
+* Home Automation - We will help you fix or maintain smart home elements already in your home.  We prefer to use a platform called Home Assistant.  No surprise, it's open source software.  It can all be run locally as well.  That means if you lose internet connection, your smart home will still work.  You also don't need to worry about a company dropping support for a piece of hardware you have in your home.
 * Cameras and NVR - Home and business camera solutions are everywhere and come in many options today.  We can help you setup new cameras or maintain ones you already have.  We also use a solution called frigate, yet another open source solution.  We choose to use this because it keeps all your camera feeds and recordings local.  That means they will still work without an outside internet connection.  It also means that you don't have to worry about your camera footage being shared without your consent.  As well as camera companies accidentally giving access to your cameras to others.
-* Electronics Recycling and Data Destruction - We will properly dispose of your electronics for you.  We can also wipe data from your devices.  When we wipe your data we use ShredOS using the standars of the DoD.
-* Extending the Life of Computers - Do you have a computer that still works but is running a little slow?  We will show you options to extend it's life and improve it's performance so you don't need to buy a new computer if you don't have to.
+* Electronics Recycling and Data Destruction - We will properly dispose of your electronics for you.  We can also wipe data from your devices.  When we wipe your data we use ShredOS using the standards of the DoD.
+* Extending the Life of Computers - Do you have a computer that still works but is running a little slow?  We will show you options to extend its life and improve its performance so you don't need to buy a new computer if you don't have to.
