--- a/_posts/2024-02-20-welcome.md
+++ b/_posts/2024-02-20-welcome.md
@@ -13,7 +13,7 @@ Hello and welcome to Crank Technologies.  We, and currently we is mostly one per
 
 These are the core principles that we do our best to abide by with our work and what they mean.
 
-* Open Source Focused - Open source software means anyone can use it and everyone can see exactly how it's made.  That means any problems or security risks can be seen, reported, and fixed. It also means that if you have the skill and ability, you can often run it for free. Now not everything we do and work in is open source.  Sometimes no has developed an open source solution for a particular problem.  Also sometimes you just plain don't have the time to build and maintain it yourself.  Even this website is open source!  If you see a problem with it, head to Github and make a pull request for a change.
+* Open Source Focused - Open source software means anyone can use it and everyone can see exactly how it's made.  That means any problems or security risks can be seen, reported, and fixed. It also means that if you have the skill and ability, you can often run it for free. Now not everything we do and work in is open source.  Sometimes no has developed an open source solution for a particular problem.  Also sometimes you just plain don't have the time to build and maintain it yourself.  Even this website is open source!  If you see a problem with it, head to GitHub and make a pull request for a change.
 * Transparency in our Work - We will always share with you exactly what we do.  Down to the code and exact steps we use to do it.  We will also make posts here to show you what you do in case you might want to try it yourself.
 * Privacy - Beyond the base of what we do nothing about you or exactly what we do for you will be shared. Even though we are focused on openness and transparency.  Your personal information should remain private and we will keep it that way.
 
