Added password manager bullet.

--- a/_posts/2024-02-20-welcome.md
+++ b/_posts/2024-02-20-welcome.md
@@ -25,3 +25,4 @@ These are the core principles that we do our best to abide by with our work and 
 * Cameras and NVR - Home and business camera solutions are everywhere and come in many options today.  We can help you setup new cameras or maintain ones you already have.  We also use a solution called frigate, yet another open source solution.  We choose to use this because it keeps all your camera feeds and recordings local.  That means they will still work without an outside internet connection.  It also means that you don't have to worry about your camera footage being shared without your consent.  As well as camera companies accidentally giving access to your cameras to others.
 * Electronics Recycling and Data Destruction - We will properly dispose of your electronics for you.  We can also wipe data from your devices.  When we wipe your data we use ShredOS using the standards of the DoD.
 * Extending the Life of Computers - Do you have a computer that still works but is running a little slow?  We will show you options to extend its life and improve its performance so you don't need to buy a new computer if you don't have to.
+* Safe and secure password management - We use and can help setup secure password management for you.  We use a product called Bit Warden.  It's an open soure and free password manager with paid options for teams and organizations.
